--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="text-3xl font-bold mb-6">Transactions</h1>
 
   <div class="mb-4">
-    <%= link_to "Add Transaction", new_transaction_path, class: "bg-[#583be8] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+    <%= link_to "Add Transaction", new_transaction_path, class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
   </div>
 
   <!-- Filter Panel -->
@@ -22,7 +22,7 @@
       </div>
 
       <div>
-        <%= f.submit "Filter", class: "bg-[#583be8] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+        <%= f.submit "Filter", class: "bg-[#F3C734] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
       </div>
 
     <% end %>
@@ -43,7 +43,7 @@
         <tr class="border-t">
           <td class="px-4 py-2"><%= t.date %></td>
           <td class="px-4 py-2 capitalize"><%= t.transaction_type %></td>
-          <td class="px-4 py-2 <%= t.transaction_type == 'expense' ? 'text-[#df3c27]' : 'text-[#33a34d]' %>">
+          <td class="px-4 py-2 <%= t.transaction_type == 'expense' ? 'text-[#D83A3A]' : 'text-[#3FBF3F]' %>">
             <%= number_to_currency(t.amount) %>
           </td>
           <td class="px-4 py-2"><%= t.category.name %></td>
