--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -31,11 +31,11 @@
 
       <div>
         <%= form.label :date, class: "block text-sm font-medium text-gray-700" %>
-        <%= form.date_select :date, {}, class: "mt-1 block w-full" %>
+        <%= form.date_select :date, class: "mt-1 block w-full" %>
       </div>
 
       <div>
-        <%= form.submit "Add", class: "bg-[#583be8] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+        <%= form.submit "Add", class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
       </div>
 
     </div>
