--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -36,6 +36,7 @@
 
       <div>
         <%= form.submit "Add", class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+        <%= link_to "Cancel", transactions_path, class: "bg-[#F3C734] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
       </div>
 
     </div>
