fix: adjusting naming of variables to labels in components

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -48,7 +48,7 @@
       <div class="bg-[#3B2A7B] p-4 rounded-xl shadow-md text-white">
         <h2 class="text-lg font-semibold">Total Balance</h2>
         <%# "number_with_precision" is a Rails helper to format numbers. %>
-        <p class="text-2xl font-bold mt-2">$<%= number_with_precision(@balance, precision: 2) %></p>
+        <p class="text-2xl font-bold mt-2">$<%= number_with_precision(@total_balance, precision: 2) %></p>
       </div>
   </div>
 
