--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -10,8 +10,7 @@
   <%# [local]: defines whether or not are we using AJAX. "True" defines using normal HTML requests. %>
   <!-- Filter Panel -->
   <div class="mb-6">
-    <%= form_with url: transactions_path, method: :get, local: true, class: "flex flex-wrap gap-4 items-end" do |form| %>
-      
+    <%= form_with url: transactions_path, method: :get, local: true, class: "flex flex-wrap gap-4 items-end" do |form| %>      
       <div>
         <%= form.label :type, "Type", class: "block text-sm font-medium text-gray-700" %>
         <%= form.select :type, [["All", ""], ["Income", "income"], ["Expense", "expense"]],
@@ -23,7 +22,6 @@
         <%= form.collection_select :category_id, @categories, :id, :name,
             { include_blank: "All", selected: params[:category_id] }, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm" %>
       </div>
-
 
       <div class="grid grid-cols-2 gap-4">
         <div>
@@ -68,7 +66,6 @@
       </div>
   </div>
 
-
   <table class="min-w-full bg-[#ffffff] shadow-md rounded-lg overflow-hidden">
     <thead class="bg-gray-100 text-left text-sm font-semibold text-[#121212]">
       <tr>
@@ -77,18 +74,22 @@
         <th class="px-4 py-3">Amount</th>
         <th class="px-4 py-3">Category</th>
         <th class="px-4 py-3">Description</th>
+        <th class="px-4 py-3">Tags</th>
       </tr>
     </thead>
     <tbody class="text-[#121212] text-sm">
-      <% @transactions.each do |t| %>
+      <% @transactions.each do |transaction| %>
         <tr class="border-t">
-          <td class="px-4 py-2"><%= t.date %></td>
-          <td class="px-4 py-2 capitalize"><%= t.transaction_type %></td>
-          <td class="px-4 py-2 <%= t.transaction_type == 'expense' ? 'text-[#D83A3A]' : 'text-[#3FBF3F]' %>">
-            <%= number_to_currency(t.amount) %>
+          <td class="px-4 py-2"><%= transaction.date %></td>
+          <td class="px-4 py-2 capitalize"><%= transaction.transaction_type %></td>
+          <td class="px-4 py-2 <%= transaction.transaction_type == "expense" ? "text-[#D83A3A]" : "text-[#3FBF3F]" %>">
+            <%= number_to_currency(transaction.amount) %>
           </td>
-          <td class="px-4 py-2"><%= t.category.name %></td>
-          <td class="px-4 py-2"><%= t.description %></td>
+          <td class="px-4 py-2"><%= transaction.category.name %></td>
+          <td class="px-4 py-2"><%= transaction.description %></td>
+          <td class="px-4 py-2">
+            <%= transaction.tags.map(&:name).join(", ") %>
+          </td>
         </tr>
       <% end %>
     </tbody>
