--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -7,12 +7,12 @@
       <div>
         <%= form.label :transaction_type, class: "block text-sm font-medium text-gray-700" %>
         <%# This Select has a 2D array as value. The first index is the label, the second is the value. %>
-        <%= form.select :transaction_type, ["income", "expense"].map { |t| [t.capitalize, t] }, {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm" %>
+        <%= form.select :transaction_type, ["income", "expense"].map { |t| [t.capitalize, t] }, {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
       </div>
 
       <div class="form-group">
         <%= form.label :amount, class: "block text-sm font-medium text-gray-700" %>
-        <%= form.number_field :amount, step: 0.01, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm" %>
+        <%= form.number_field :amount, step: 0.01, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
         <% if @transaction.errors[:amount].any? %>
           <p class="text-sm text-[#D83A3A]">
             <%= @transaction.errors[:amount].join(", ") %>
@@ -26,28 +26,28 @@
         <%# :[myEntityField] defines which field from the entity the Form will hold as a value for this field. %>
         <%# @[myEntity] tells Rails which collection are we using to populate the list. %>
         <%# :[myEntityField], :[myEntityField] tells Rails which field is the value and which is the label. %>
-        <%= form.collection_select :category_id, @categories, :id, :name, {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm" %>
+        <%= form.collection_select :category_id, @categories, :id, :name, {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
       </div>
 
       <div>
         <%= form.label :description, class: "block text-sm font-medium text-gray-700" %>
-        <%= form.text_field :description, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm" %>
+        <%= form.text_field :description, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
       </div>
 
       <div>
         <%= form.label :date, class: "block text-sm font-medium text-gray-700" %>
         <%# As we are working with "locales" that handle Dates in a different way, "date_field" avoids many headaches about ISO formatting. %>
-        <%= form.date_field :date, class: "mt-1 block w-full" %>
+        <%= form.date_field :date, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
       </div>
 
       <div>
         <%= form.label :tags, "Tags (comma-separated)", class: "block text-sm font-medium text-gray-700" %>
-        <%= form.text_field :tags, value: @transaction.tags.map(&:name).join(","), class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm" %>
+        <%= form.text_field :tags, value: @transaction.tags.map(&:name).join(","), class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
       </div>
 
-      <div>
+      <div class="flex items-center justify-between">
         <%= form.submit "Add", class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
-        <%= link_to "Cancel", transactions_path, class: "bg-[#F3C734] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+        <%= link_to "Cancel", transactions_path, class: "bg-[#F3C734] hover:filter hover:brightness-90 transition text-white px-4 py-2 h-10 rounded-md shadow" %>
       </div>
 
     </div>
