--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -6,8 +6,7 @@
 
       <div>
         <%= form.label :transaction_type, class: "block text-sm font-medium text-gray-700" %>
-        <%# This Select has a 2D array as value. The first index is the label, the second is the value. %>
-        <%= form.select :transaction_type, ["income", "expense"].map { |t| [t.capitalize, t] }, {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
+        <%= form.select :transaction_type, options_for_select(Transaction.transaction_types.keys.map { |type| [type.humanize, type] }), {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
       </div>
 
       <div class="form-group">
