--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -5,41 +5,8 @@
     <%= link_to "Add Transaction", new_transaction_path, class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
   </div>
 
-  <%# [url]: defines the URL where we will send our request; %>
-  <%# [method]: used to defined which HTTP method we are using (default is POST); %>
-  <%# [local]: defines whether or not are we using AJAX. "True" defines using normal HTML requests. %>
   <!-- Filter Panel -->
-  <div class="mb-6">
-    <%= form_with url: transactions_path, method: :get, local: true, class: "flex flex-wrap gap-4 items-end" do |form| %>      
-      <div>
-        <%= form.label :type, "Type", class: "block text-sm font-medium text-gray-700" %>
-        <%= form.select :type, options_for_select(build_transaction_types_for_filter, params[:type]), {}, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
-      </div>
-
-      <div>
-        <%= form.label :category_id, "Category", class: "block text-sm font-medium text-gray-700" %>
-        <%= form.collection_select :category_id, @categories, :id, :name,
-            { include_blank: "All", selected: params[:category_id] }, class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
-      </div>
-
-      <div class="grid grid-cols-2 gap-4">
-        <div>
-          <%= form.label :start_date, "Start Date", class: "block text-sm font-medium text-gray-700" %>
-          <%= form.date_field :start_date, value: params[:start_date], class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
-        </div>
-
-        <div>
-          <%= form.label :end_date, "End Date", class: "block text-sm font-medium text-gray-700" %>
-          <%= form.date_field :end_date, value: params[:end_date], class: "mt-1 block w-full border-gray-300 rounded-md shadow-sm py-2" %>
-        </div>
-      </div>
-
-      <div>
-        <%= form.submit "Filter", class: "bg-[#F3C734] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
-      </div>
-
-    <% end %>
-  </div>
+  <%= render "filter" %>
 
   <!-- Totals Cards -->
   <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
