feat: added explanation comment

--- a/app/views/transactions/_filter.html.erb
+++ b/app/views/transactions/_filter.html.erb
@@ -1,3 +1,6 @@
+<%# If the file starts with "_", Rails treat it as a partial (shared component). %>
+<%# Without the "@" the "properties" becomes a local variable instead of an instance. %>
+<%# ---------------------------------------------------------------------------------- %>
 <%# [url]: defines the URL where we will send our request; %>
 <%# [method]: used to defined which HTTP method we are using (default is POST); %>
 <%# [local]: defines whether or not are we using AJAX. "True" defines using normal HTML requests. %>
