--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -2,6 +2,9 @@
 <%# For example, for the "is_view_mode" property we are defining a default value. So it is optional to be passed by the parent. %>
 <%# locals: (transaction:, is_view_mode: false) %>
 
+<%# The "persisted" helper tells us whether the instance was already saved in the DB or not.  %>
+<% submit_label = transaction.persisted? ? "Update" : "Add" %>
+
 <%= form_with model: transaction do |form| %>
   <div class="space-y-4">
     <div>
@@ -57,7 +60,9 @@
 
     <div class="flex items-center justify-between">
       <% unless is_view_mode %>
-        <%= form.submit "Add", class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+        <%= form.submit submit_label, class: "bg-[#3FBF3F] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
+      <% else %>
+        <%= link_to "Edit", edit_transaction_path(@transaction), class: "bg-[#3B2A7B] hover:filter hover:brightness-90 transition text-white px-4 py-2 rounded-md shadow" %>
       <% end %>
       <%= link_to (is_view_mode ? "Back" : "Cancel"), transactions_path, class: "bg-[#F3C734] hover:filter hover:brightness-90 transition text-white px-4 py-2 h-10 rounded-md shadow" %>
     </div>
