feat: removing excessive margin top from main layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
       });
     </script>
 
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto py-2 px-5 flex">
       <%= yield %>
     </main>
   </body>
